add transaction which includes fee's calculations
